--- a/Exercise2/distributed-systems.html
+++ b/Exercise2/distributed-systems.html
@@ -85,7 +85,7 @@
                             including servers, desktops, or mobile devices.
                         </p>
                         <a href="https://www.coursera.org/learn/parallel-programming-in-java?specialization=pcdp">Coursera</a>
-                        <p>Cost: $35</p>
+                        <p class= "cost">Cost: $35</p>
                     </div>
                     <div class="course-right">
                         <img src="img/banner-parallel-programming.jpg" alt="paralllel programming in java banner">
@@ -117,7 +117,7 @@
                             livelock, starvation, linearizability).
                         </p>
                         <a href="https://www.coursera.org/learn/concurrent-programming-in-java?specialization=pcdp">Coursera</a>
-                        <p>Cost: $20</p>
+                        <p class= "cost">Cost: $20</p>
                     </div>
                     <div class="course-right">
                         <img src="img/banner-concurrent-programming.png" alt="concurrent programming in java banner">
@@ -148,7 +148,7 @@
                             Message Passing Interface (MPI), as well as different approaches to combine distribution with multithreading.
                         </p>
                         <a href="https://www.coursera.org/learn/distributed-programming-in-java?specialization=pcdp">Coursera</a>
-                        <p>Cost: $40</p>
+                        <p class= "cost">Cost: $40</p>
                     </div>
                     <div class="course-right">
                         <img src="img/banner-kafka.png" alt="distributed programming in java banner">
@@ -176,7 +176,7 @@
                             Learn about such fundamental distributed computing "concepts" for cloud computing.
                         </p>
                         <a href="https://www.coursera.org/learn/cloud-computing?specialization=cloud-computing">Coursera</a>
-                        <p>Cost: $40</p>
+                        <p class= "cost">Cost: $40</p>
                     </div>
                     <div class="course-right">
                         <img src="img/banner-cloud-1.jpg" alt="cloud computing concepts banner">
@@ -205,7 +205,7 @@
                             template code (programs) provided in the C++ programming language.
                         </p>
                         <a href="https://www.coursera.org/projects/android-app-kotlin">Coursera</a>
-                        <p>Cost: $40</p>
+                        <p class= "cost">Cost: $40</p>
                     </div>
                     <div class="course-right">
                         <img src="img/banner-cloud-2.jpg" alt="cloud computing concepts banner">
