finished topics page

--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -36,7 +36,7 @@
 
     <main class="container">
         <!-- Page banner -->
-        <section class="about">
+        <section class="about about-topics">
             <div class="section-title">
                 <h2>Explore Topics</h2>
             </div>
@@ -66,7 +66,7 @@
 
         <!-- Topic -- Application Development -->
         <section class="banner">
-            <div class="banner-right">
+            <div class="banner-left">
                 <h2>Application Development</h2>
                 <ul>
                     <li>Android Application Develoment</li>
@@ -74,7 +74,7 @@
                     <li><a href="distributed-systems.html">Distributed Systems</a></li>
                 </ul>
             </div>
-            <div class="banner-left">
+            <div class="banner-right">
                 <img src="img/banner-app-dev.jpg" alt="application development banner">
             </div>
         </section>
@@ -91,13 +91,13 @@
                 </ul>
             </div>
             <div class="banner-right">
-                <img src="img/banner-health-science.png" alt="health science banner">
+                <img src="img/banner-health-science.jpg" alt="health science banner">
             </div>
         </section>
 
         <!-- Topic -- Business Science -->
         <section class="banner">
-            <div class="banner-right">
+            <div class="banner-left">
                 <h2>Business Science</h2>
                 <ul>
                     <li>Human Resources </li>
@@ -105,7 +105,7 @@
                     <li>Risk Management</li>
                 </ul>
             </div>
-            <div class="banner-left">
+            <div class="banner-right">
                 <img src="img/banner-business-science.jpg" alt="business science banner">
             </div>
         </section>
