--- a/Exercise2/topics.html
+++ b/Exercise2/topics.html
@@ -37,7 +37,7 @@
 
     <main class="container">
         <!-- Page banner -->
-        <section class="about">
+        <section class="about about-topics">
             <div class="section-title">
                 <h2>Explore Topics</h2>
             </div>
@@ -51,7 +51,7 @@
         </section>
 
         <!-- Topic -- Data Science -->
-        <section class="banner">
+        <section class="banner banner-topic">
             <div class="banner-left">
                 <h2>Data Science</h2>
                 <ul>
@@ -66,8 +66,8 @@
         </section>
 
         <!-- Topic -- Application Development -->
-        <section class="banner">
-            <div class="banner-right">
+        <section class="banner banner-topic">
+            <div class="banner-left">
                 <h2>Application Development</h2>
                 <ul>
                     <li>Android Application Develoment</li>
@@ -75,13 +75,13 @@
                     <li><a href="distributed-systems.html">Distributed Systems</a></li>
                 </ul>
             </div>
-            <div class="banner-left">
+            <div class="banner-right">
                 <img src="img/banner-app-dev.jpg" alt="application development banner">
             </div>
         </section>
 
         <!-- Topic -- Health Science -->
-        <section class="banner">
+        <section class="banner banner-topic">
             <div class="banner-left">
                 <h2>Health Science</h2>
                 <ul>
@@ -92,13 +92,13 @@
                 </ul>
             </div>
             <div class="banner-right">
-                <img src="img/banner-health-science.png" alt="health science banner">
+                <img src="img/banner-health-science.jpg" alt="health science banner">
             </div>
         </section>
 
         <!-- Topic -- Business Science -->
-        <section class="banner">
-            <div class="banner-right">
+        <section class="banner banner-topic">
+            <div class="banner-left">
                 <h2>Business Science</h2>
                 <ul>
                     <li>Human Resources </li>
@@ -106,13 +106,13 @@
                     <li>Risk Management</li>
                 </ul>
             </div>
-            <div class="banner-left">
+            <div class="banner-right">
                 <img src="img/banner-business-science.jpg" alt="business science banner">
             </div>
         </section>
 
         <!-- Topic -- Arts and Humanities -->
-        <section class="banner">
+        <section class="banner banner-topic">
             <div class="banner-left">
                 <h2>Arts and Humanities</h2>
                 <ul>
