--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo-sm.jpg" alt="webpage icon">
+                <img src="img/logo-sm.png" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
