index complete with grid

--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -8,17 +8,19 @@
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
     <!-- <link href="css/generally_appliable.css" rel="stylesheet"> -->
     <title>Welcome | SkillDev</title>
 </head>
 <body>
+    <div class="wrapper"> <!--for grid-->
     <!-- Header bar -->
     <header class="container">  
         <!-- Navigation bar -->
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo-sm.png" alt="webpage icon">
+                <img src="img/logo-sm.png" alt="webpage icon">  
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -110,5 +112,6 @@
             </ul>
         </div>
     </footer>
+    </div>
 </body>
 </html>
