--- a/Exercise2/topics.html
+++ b/Exercise2/topics.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
     <title>Topics | SkillDev</title>
 </head>
 <body>
