completed bio sections

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo-md.jpg" alt="webpage icon">
+                <img src="img/logo-sm.png" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -36,11 +36,11 @@
     
     <!-- Biography -->
     <main class="container">
-        <section class="about">
+        <section class="about about-bio">
             <div class="section-title">
                 <h2>Get to know us!</h2>
             </div>
-            <div class="section-info"> <!-- fix this-->
+            <div class="section-info">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Quidem non odit possimus sequi. 
@@ -57,8 +57,12 @@
         <!-- Stefanos bio -->
         <article id ="Stevebio" class="bio">
             <header class="bio-header">
-                <img src="img/stephen-avatar.jpg" alt="stefanos avatar">
-                <h2>Steve Meidanis</h2>
+                <div>
+                    <img src="img/stephen-avatar.jpg" alt="stefanos avatar">
+                </div>
+                <div>
+                    <h2>Steve Meidanis</h2>
+                </div>
             </header>
             <section class="bio-info">
                 <div class="bio-summary">
@@ -115,8 +119,12 @@
        <!-- Lampros bio -->
        <article id="Lamprosbio" class="bio">
             <header class="bio-header">
-                <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
-                <h2>Lampros Lountzis</h2>
+                <div>
+                    <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
+                </div>
+                <div>
+                    <h2>Lampros Lountzis</h2>
+                </div>
             </header>
             <section class="bio-info">
                 <div class="bio-summary">
