--- a/Exercise2/about.html
+++ b/Exercise2/about.html
@@ -37,18 +37,17 @@
     
     <!-- Biography -->
     <main class="container">
-        <section class="about">
+        <section class="about about-bio">
             <div class="section-title">
                 <h2>Get to know us!</h2>
             </div>
-            <div class="section-info"> <!-- fix this-->
+            <div class="section-info">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Quidem non odit possimus sequi. 
                     Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
                 </p>
             </div>
-
             <div class="navbuttons">
                 <a href="#Stevebio">Steve</a>
                 <a href="#Lamprosbio">Lampros</a>
@@ -58,8 +57,12 @@
         <!-- Stefanos bio -->
         <article id ="Stevebio" class="bio">
             <header class="bio-header">
-                <img src="img/stephen-avatar.jpg" alt="stefanos avatar">
-                <h2>Steve Meidanis</h2>
+                <div>
+                    <img src="img/stephen-avatar.jpg" alt="stefanos avatar">
+                </div>
+                <div>
+                    <h2>Steve Meidanis</h2>
+                </div>
             </header>
             <section class="bio-info">
                 <div class="bio-summary">
@@ -116,8 +119,12 @@
        <!-- Lampros bio -->
        <article id="Lamprosbio" class="bio">
             <header class="bio-header">
-                <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
-                <h2>Lampros Lountzis</h2>
+                <div>
+                    <img src="img/lampros-avatar.jpeg" alt="lampros avatar">
+                </div>
+                <div>
+                    <h2>Lampros Lountzis</h2>
+                </div>
             </header>
             <section class="bio-info">
                 <div class="bio-summary">
