--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -42,9 +42,9 @@
             </div>
             <div class="section-info">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Quidem non odit possimus sequi. 
-                    Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
+                    SkillDev partners with more than 200 leading companies to bring flexible, affordable, 
+                    job-relevant online learning to individuals and organizations worldwide. We offer a range of
+                    learning opportunities—from hands-on projects and courses to job-ready certificates and degree programs.
                 </p>
             </div>
 
