--- a/Exercise2/about.html
+++ b/Exercise2/about.html
@@ -8,9 +8,11 @@
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
     <title>About Us | SkillDev</title>
 </head>
 <body>
+    <div class="wrapper">
    <!-- Header bar -->
    <header class="container">  
         <!-- Navigation bar -->
@@ -43,9 +45,9 @@
             </div>
             <div class="section-info">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Quidem non odit possimus sequi. 
-                    Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
+                    SkillDev partners with more than 200 leading companies to bring flexible, affordable, 
+                    job-relevant online learning to individuals and organizations worldwide. We offer a range of
+                    learning opportunities—from hands-on projects and courses to job-ready certificates and degree programs.
                 </p>
             </div>
             <div class="navbuttons">
@@ -190,5 +192,6 @@
             </ul>
         </div>
     </footer>
+    </div>
 </body>
 </html>
