--- a/Exercise2/web-dev.html
+++ b/Exercise2/web-dev.html
@@ -37,9 +37,9 @@
         </nav>
     </header> 
 
-    <main class="course-container">
+    <div class="container">
         <!-- Page banner -->
-        <section class="about">
+        <section class="about about-web">
             <div class="section-title">
                 <h2>About this Course</h2>
             </div>
@@ -52,32 +52,33 @@
                 </p>
             </div>
         </section>
+    </div>
 
-        
-            <!-- Sidebar -->
-            <div class="sidebar-box"> 
-            <aside class="sidebar">
-                <nav>
-                    <h2>Courses</h2>
-                    <ul>
-                        <li><a href="#wb-course-1">Introduction to HTML</a></li>
-                        <li><a href="#wb-course-2">Cascading Style Sheets</a></li>
-                        <li><a href="#wb-course-3">Website Functionality - JS</a></li>
-                        <li><a href="#wb-course-4">Full-Stack Developement</a></li>
-                        <li><a href="#wb-course-5">Introduction to APIs</a></li>
-                    </ul>
-                </nav>
-            </aside>
-            </div>
+    <main class="course-container">    
+        <!-- Sidebar -->
+        <div class="sidebar-box"> 
+        <aside class="sidebar">
+            <nav>
+                <h2>Courses</h2>
+                <ul>
+                    <li><a href="#wb-course-1">Introduction to HTML</a></li>
+                    <li><a href="#wb-course-2">Cascading Style Sheets</a></li>
+                    <li><a href="#wb-course-3">Website Functionality - JS</a></li>
+                    <li><a href="#wb-course-4">Full-Stack Developement</a></li>
+                    <li><a href="#wb-course-5">Introduction to APIs</a></li>
+                </ul>
+            </nav>
+        </aside>
+        </div>
 
-            <!-- Course info -->
-            <article class="course-list">
-                <!-- Course -- Introduction to HTML -->
-                <section class="course" id="wb-course-1">
-                    <div class="course-top">
-                        <h2>Introduction to HTML</h2>
-                    </div>
-                    <div class="course-middle">
+        <!-- Course info -->
+        <article class="course-list">
+            <!-- Course -- Introduction to HTML -->
+            <section class="course" id="wb-course-1">
+                <div class="course-top">
+                    <h2>Introduction to HTML</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will study the basic terms you need to know before starting to build your Website,
@@ -89,24 +90,24 @@
                     <div class="course-right">
                         <img src="img/banner-wb-course-1.png" alt="intorduction to html banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Web history</li>
-                            <li>HTML 5 - Beginner</li>
-                            <li>HTML 5 - Intermediate</li>
-                            <li>HTML 5 - Expert</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Web history</li>
+                        <li>HTML 5 - Beginner</li>
+                        <li>HTML 5 - Intermediate</li>
+                        <li>HTML 5 - Expert</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Cascading Style Sheets -->
-                <section class="course" id="wb-course-2">
-                    <div class="course-top">
-                        <h2>Cascading Style Sheets</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Cascading Style Sheets -->
+            <section class="course" id="wb-course-2">
+                <div class="course-top">
+                    <h2>Cascading Style Sheets</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             The web today is almost unrecognizable from the early days of white pages with lists of blue links.
@@ -120,25 +121,25 @@
                     <div class="course-right">
                         <img src="img/banner-wb-course-2.png" alt="cascading style sheets banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Getting Started with Simple Styling</li>
-                            <li>Advanced Styling</li>
-                            <li>Psuedo-classes, Pseudo-elements, Transitions, and Positioning</li>
-                            <li>Putting It All Together</li>
-                            <li>Where To Go From Here?</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Getting Started with Simple Styling</li>
+                        <li>Advanced Styling</li>
+                        <li>Psuedo-classes, Pseudo-elements, Transitions, and Positioning</li>
+                        <li>Putting It All Together</li>
+                        <li>Where To Go From Here?</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Website Functionality - JS -->
-                <section class="course" id="wb-course-3">
-                    <div class="course-top">
-                        <h2>Website Functionality- JS</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Website Functionality - JS -->
+            <section class="course" id="wb-course-3">
+                <div class="course-top">
+                    <h2>Website Functionality- JS</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will learn how to add Functionality to your Website, with Javascript. Icldues Introduction
@@ -150,25 +151,25 @@
                     <div class="course-right">
                         <img src="img/banner-wb-course-3.png" alt="website functionality - js banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Object oriented programming</li>
-                            <li>JavaScript Basics</li>
-                            <li>Animation with JavaScript and jQuery</li>
-                            <li>Interactivity with JavaScript and jQuery</li>
-                            <li>JSON and Data Manipulation in JavaScript</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Object oriented programming</li>
+                        <li>JavaScript Basics</li>
+                        <li>Animation with JavaScript and jQuery</li>
+                        <li>Interactivity with JavaScript and jQuery</li>
+                        <li>JSON and Data Manipulation in JavaScript</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Full-Stack Developement -->
-                <section class="course" id="wb-course-4">
-                    <div class="course-top">
-                        <h2>Full-Stack Developement</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Full-Stack Developement -->
+            <section class="course" id="wb-course-4">
+                <div class="course-top">
+                    <h2>Full-Stack Developement</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             Become a Full-Stack Web Developer with just ONE course. HTML, CSS, Javascript, Node, MongoDB, 
@@ -180,31 +181,31 @@
                     <div class="course-right">
                         <img src="img/banner-wb-course-4.jpeg" alt="full stack development banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Front-End Web Developemnt</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Bootstrap 4</li>
-                            <li>Javascript ES6</li>
-                            <li>jQuery</li>
-                            <li>Backend-Web Developemnt</li>
-                            <li>Node.js</li>
-                            <li>Databases</li>
-                            <li>SQL</li>
-                            <li>MongoDB</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Front-End Web Developemnt</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap 4</li>
+                        <li>Javascript ES6</li>
+                        <li>jQuery</li>
+                        <li>Backend-Web Developemnt</li>
+                        <li>Node.js</li>
+                        <li>Databases</li>
+                        <li>SQL</li>
+                        <li>MongoDB</li>
+                    </ol>
+                </div>
+            </section>
 
-                 <!-- Course -- Introduction to APIs -->
-                 <section class="course" id="wb-course-5">
-                    <div class="course-top">
-                        <h2>Introduction to APIs</h2>
-                    </div>
-                    <div class="course-middle">
+                <!-- Course -- Introduction to APIs -->
+                <section class="course" id="wb-course-5">
+                <div class="course-top">
+                    <h2>Introduction to APIs</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             Develop APIs with the Apigee API Platform. Learn how to design, build, secure, deploy, 
@@ -216,17 +217,17 @@
                     <div class="course-right">
                         <img src="img/banner-wb-course-5.jpeg" alt="api banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>API Design and Fundamentals of Google Cloud's Apigee API Platform</li>
-                            <li>API Security on Google Cloud's Apigee API Platform</li>
-                            <li>API Development on Google Cloud's Apigee API Platform</li>
-                        </ol>
-                    </div>
-                </section>
-            </article>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>API Design and Fundamentals of Google Cloud's Apigee API Platform</li>
+                        <li>API Security on Google Cloud's Apigee API Platform</li>
+                        <li>API Development on Google Cloud's Apigee API Platform</li>
+                    </ol>
+                </div>
+            </section>
+        </article>
     </main>
 
     <!-- Footer bar -->
