--- a/Exercise2/machine-learning.html
+++ b/Exercise2/machine-learning.html
@@ -37,9 +37,9 @@
         </nav>
     </header> 
 
-    <main class="course-container">
+    <div class="container">
         <!-- Page banner -->
-        <section class="about">
+        <section class="about about-ml">
             <div class="section-title">
                 <h2>About this Course</h2>
             </div>
@@ -55,10 +55,11 @@
                 </p>
             </div>
         </section>
+    </div>
 
-       
-            <!-- Sidebar -->
-            <div class="sidebar-box">
+    <main class="course-container">   
+        <!-- Sidebar -->
+        <div class="sidebar-box">
             <aside class="sidebar">
                 <nav>
                     <h2>Courses</h2>
@@ -70,17 +71,17 @@
                         <li><a href="#ml-course-5">Sequence Models</a></li>
                     </ul>
                 </nav>
-                </aside>
-            </div>
+            </aside>
+        </div>
 
-            <!-- Course info -->
-            <article class="course-list">
-                <!-- Course -- Neural Networks and Deep Learning -->
-                <section class="course" id="ml-course-1">
-                    <div class="course-top">
-                        <h2>Neural Networks and Deep Learning</h2>
-                    </div>
-                    <div class="course-middle">
+        <!-- Course info -->
+        <article class="course-list">
+            <!-- Course -- Neural Networks and Deep Learning -->
+            <section class="course" id="ml-course-1">
+                <div class="course-top">
+                    <h2>Neural Networks and Deep Learning</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will study the foundational concept of neural networks and deep learning. 
@@ -93,24 +94,24 @@
                     <div class="course-right">
                         <img src="img/banner-ml-course-1.jpg" alt="neural networks and deep learning banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Introduction to Deep Learning</li>
-                            <li>Neural Networks Basics</li>
-                            <li>Shallow Neural Networks</li>
-                            <li>Deep Neural Networks</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Introduction to Deep Learning</li>
+                        <li>Neural Networks Basics</li>
+                        <li>Shallow Neural Networks</li>
+                        <li>Deep Neural Networks</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization -->
-                <section class="course" id="ml-course-2">
-                    <div class="course-top">
-                        <h2>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization -->
+            <section class="course" id="ml-course-2">
+                <div class="course-top">
+                    <h2>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will open the deep learning black box to understand the processes 
@@ -125,25 +126,25 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-ml-course-2.jpg" alt="improving deep neural networks banner">
+                        <img src="img/banner-ml-course-2.png" alt="improving deep neural networks banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Practical Aspects of Deep Learning</li>
-                            <li>Optimization Algorithms</li>
-                            <li>Hyperparameter Tuning, Batch Normalization and Programming Frameworks</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Practical Aspects of Deep Learning</li>
+                        <li>Optimization Algorithms</li>
+                        <li>Hyperparameter Tuning, Batch Normalization and Programming Frameworks</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Structuring Machine Learning Projects -->
-                <section class="course" id="ml-course-3">
-                    <div class="course-top">
-                        <h2>Structuring Machine Learning Projects</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Structuring Machine Learning Projects -->
+            <section class="course" id="ml-course-3">
+                <div class="course-top">
+                    <h2>Structuring Machine Learning Projects</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will learn how to build a successful machine learning project and 
@@ -158,22 +159,22 @@
                     <div class="course-right">
                         <img src="img/banner-ml-course-3.jpg" alt="structuring machine learning projects banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>ML Strategy (1)</li>
-                            <li>ML Strategy (2)</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>ML Strategy (1)</li>
+                        <li>ML Strategy (2)</li>
+                    </ol>
+                </div>
+            </section>
 
-                <!-- Course -- Convolutional Neural Networks -->
-                <section class="course" id="ml-course-4">
-                    <div class="course-top">
-                        <h2>Convolutional Neural Networks</h2>
-                    </div>
-                    <div class="course-middle">
+            <!-- Course -- Convolutional Neural Networks -->
+            <section class="course" id="ml-course-4">
+                <div class="course-top">
+                    <h2>Convolutional Neural Networks</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will understand how computer vision has evolved and become 
@@ -189,24 +190,24 @@
                     <div class="course-right">
                         <img src="img/banner-ml-course-4.jpg" alt="convolutional neural networks banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Foundations of Convolutional Neural Networks</li>
-                            <li>Deep Convolutional Models: Case Studies</li>
-                            <li>Object Detection</li>
-                            <li>Special Applications: Face recognition & Neural Style Transfer</li>
-                        </ol>
-                    </div>
-                </section>
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Foundations of Convolutional Neural Networks</li>
+                        <li>Deep Convolutional Models: Case Studies</li>
+                        <li>Object Detection</li>
+                        <li>Special Applications: Face recognition & Neural Style Transfer</li>
+                    </ol>
+                </div>
+            </section>
 
-                 <!-- Course -- Sequence Models -->
-                 <section class="course" id="ml-course-5">
-                    <div class="course-top">
-                        <h2>Sequence Models</h2>
-                    </div>
-                    <div class="course-middle">
+                <!-- Course -- Sequence Models -->
+                <section class="course" id="ml-course-5">
+                <div class="course-top">
+                    <h2>Sequence Models</h2>
+                </div>
+                <div class="course-middle">
                     <div class="course-left">
                         <p>
                             In this course, you will become familiar with sequence models and their exciting applications 
@@ -222,19 +223,18 @@
                     <div class="course-right">
                         <img src="img/banner-ml-course-5.jpg" alt="sequence models banner">
                     </div>
-                    </div>
-                    <div class="course-bottom">
-                        <h3>Syllabus - What you will learn from this course</h3>
-                        <ol>
-                            <li>Recurrent Neural Networks</li>
-                            <li>Natural Language Processing & Word Embeddings</li>
-                            <li>Sequence Models & Attention Mechanism</li>
-                            <li>Transformer Network</li>
-                        </ol>
-                    </div>
-                </section>
-            </article>
-        
+                </div>
+                <div class="course-bottom">
+                    <h3>Syllabus - What you will learn from this course</h3>
+                    <ol>
+                        <li>Recurrent Neural Networks</li>
+                        <li>Natural Language Processing & Word Embeddings</li>
+                        <li>Sequence Models & Attention Mechanism</li>
+                        <li>Transformer Network</li>
+                    </ol>
+                </div>
+            </section>
+        </article>
     </main>
 
     <!-- Footer bar -->
